feat: introduce optional validation of graph type
This is opt-in and enabled via `config.enable_graph_type`.

Specs with actions and/or custom queries are not eligible.